fix: preserve absent Iris stages in cache artifacts